<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/teste"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:behavior_skipCollapsed= "true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bola_background"
                android:layout_margin="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/linearLayout"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_app"
                    android:padding="13dp"
                    android:textSize="24dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:id="@+id/titulo_tarefas"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48.6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/nova_tarefa"
                    android:textColor="@color/colorAccent"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/adicionar_tarefa"
            />

            <EditText
                    android:id="@+id/edtTituloAdd"
                    android:layout_width="328dp"
                    android:layout_height="56dp"
                    android:background="@color/colorPastel"
                    android:layout_marginTop="28dp"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:hint="@string/nome_tarefa"/>


            <EditText
                    android:id="@+id/edtDescricaoAdd"
                    android:layout_width="328dp"
                    android:layout_height="135dp"
                    android:layout_marginTop="59dp"
                    android:background="@color/colorPastel"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"
                    android:hint="@string/descricao_tarefa"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/optional"
            />

            <Button
                    android:id="@+id/btnCriarNovaTarefa"
                    android:layout_marginTop="180dp"
                    android:layout_marginBottom="49dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bola_background"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:textAllCaps="false"
                    android:text="@string/botaoAddicionar"
            />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>




</androidx.constraintlayout.widget.ConstraintLayout>